# tapa

./: .actrc  .bazelrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUILD.bazel  CLA.md  LICENSE  MODULE.bazel  README.md  VARS.bzl  VERSION  book.toml  install.sh  pyproject.toml  serve.sh
docs/: BUILD.bazel  Doxyfile.in  __init__.py  book.toml  conf.py  index.rst  serve.sh
docs/dev/: build.rst  contributing.rst  development.rst  release.rst
docs/ref/: api.rst  output_file_organization.rst
docs/src/: SUMMARY.md
docs/src/concepts/: async-mmap.md  programming-model.md  streams.md
docs/src/developer/: build.md  development.md
docs/src/howto/: fast-cosim.md  parallel-rtl-emulation.md  performance-tuning.md  remote-execution.md  software-simulation.md  vitis-cosim.md
docs/src/reference/: api.md  cheatsheet.md  cli.md  glossary.md  output-files.md  publications.md  runtime-flags.md
docs/src/start/: first-debug.md  full-compilation.md  installation.md
docs/src/troubleshoot/: common-errors.md  cosim-issues.md  deadlocks-and-hangs.md
docs/src/tutorials/: lab-02-async-mmap.md  lab-03-vitis-hls.md  lab-04-custom-rtl.md  lab-05-floorplan.md  lab-05-parallel-cosim.md  lab-06-floorplan.md  learning-path.md
docs/tutorial/: async_mmap.rst  custom_rtl.rst  debug_tips.rst  floorplan_dse_compile.rst  migrate_from_vitis_hls.rst  realworld_example.rst
docs/user/: advanced_synth.rst  cheatsheet.rst  cosim.rst  data.rst  faq.rst  getting_started.rst  installation.rst  intro.rst  remote.rst  tasks.rst  visualizer.rst
fpga-runtime/: BUILD.bazel  Cargo.toml  WORKSPACE_NOTE  frt.cpp  frt.h  frt_compat.cpp  frt_compat_env_test.cpp  frt_cosim.cpp  frt_sim.cpp
fpga-runtime/frt/: Cargo.toml  arg_info.cpp  arg_info.h  buffer.h  buffer_arg.h  device.h  stream.h  stream_arg.h  stringify.h  tag.h
fpga-runtime/frt-cosim/: Cargo.toml  build.rs
fpga-runtime/frt-cosim/src/: context.rs  error.rs  lib.rs
fpga-runtime/frt-cosim/templates/: dpi_support.cpp.j2  run_cosim.tcl.j2  tb_verilator.cpp.j2  tb_xsim.sv.j2
fpga-runtime/frt-cosim/tests/: metadata_test.rs  tb_snapshot_test.rs
fpga-runtime/frt-dpi/: Cargo.toml
fpga-runtime/frt-dpi-verilator/: Cargo.toml
fpga-runtime/frt-dpi-verilator/src/: lib.rs
fpga-runtime/frt-dpi-xsim/: Cargo.toml  build.rs
fpga-runtime/frt-dpi-xsim/src/: lib.rs
fpga-runtime/frt-dpi/src/: axi.rs  context.rs  lib.rs  stream.rs
fpga-runtime/frt-shm/: Cargo.toml
fpga-runtime/frt-shm/src/: env.rs  lib.rs  mmap_segment.rs  queue.rs
fpga-runtime/frt-shm/tests/: cross_process.rs
fpga-runtime/frt/devices/: intel_opencl_device.cpp  intel_opencl_device.h  opencl_device.cpp  opencl_device.h  opencl_device_matcher.h  shared_memory_queue.cpp  shared_memory_queue.h  shared_memory_stream.h  xilinx_environ.cpp  (+5 more)
tapa/: BUILD.bazel  __init__.py  __main__.py  _version.py  core.py  instance.py  protocol.py  requirements.in  requirements_lock.txt  safety_check.py  tapa_wrapper.sh  task.py  task_test.py  util.py
tapa-core/: BUILD.bazel  Cargo.toml  find_cargo.sh  pytest_runner.py  run_cargo_test.sh  run_no_python_install_smoke.sh  run_python_smoke_test.sh  run_tapa_cli_golden_test.sh  run_xilinx_integration_test.sh  run_xilinx_parity_test.sh  run_xilinx_vadd_flag_parity.sh
tapa-core/tapa-cli/: Cargo.toml
tapa-core/tapa-codegen/: Cargo.toml
tapa-core/tapa-floorplan/: Cargo.toml
tapa-core/tapa-graphir/: Cargo.toml
tapa-core/tapa-graphir-export/: Cargo.toml
tapa-core/tapa-lowering/: Cargo.toml
tapa-core/tapa-protocol/: Cargo.toml
tapa-core/tapa-py-bindings/: Cargo.toml
tapa-core/tapa-rtl/: Cargo.toml
tapa-core/tapa-slotting/: Cargo.toml
tapa-core/tapa-task-graph/: Cargo.toml
tapa-core/tapa-topology/: Cargo.toml
tapa-core/tapa-xilinx/: Cargo.toml
tapa-core/tests/: parity_test.py  python_smoke_test.py
tapa-lib/: BUILD.bazel
tapa-lib/tapa/: compat.h  scoped_log_sink_mock.h  scoped_set_env.h
tapa/abgraph/: BUILD.bazel  __init__.py  ab_graph.py  gen_abgraph.py  slot_utilities.py
tapa/assets/: BUILD.bazel  __init__.py
tapa/backend/: BUILD.bazel  __init__.py  device_config.py  kernel_metadata.py  xilinx.py  xilinx_hls.py  xilinx_tools.py  xilinx_tools_test.py
tapa/codegen/: __init__.py  instance_signals.py  program_rtl.py  task_rtl.py
tapa/common/: BUILD.bazel  __init__.py  base.py  constant.py  external_port.py  graph.py  interconnect_definition.py  interconnect_instance.py  paths.py  paths_test.py  pyslang_rewriter.py  target.py  task_definition.py  task_instance.py  unique_attrs.py
tapa/cosim/: BUILD.bazel  __init__.py  __main__.py  common.py  config_preprocess.py  config_preprocess_test.py  main_test.py  render.py  render_test.py  templates.py  verilator.py  verilator_build.py  verilator_build_test.py  verilator_dpi.py  verilator_dpi_test.py  verilator_ips.py  verilator_ips_test.py  verilator_tb_axi.py  verilator_tb_axi_test.py  verilator_tb_core.py  verilator_tb_core_test.py  verilator_tb_stream.py  verilator_tb_stream_test.py  verilator_test.py  vivado.py  vivado_test.py
tapa/graphir/: __init__.py
tapa/graphir_conversion/: BUILD.bazel  __init__.py  add_iface.py  gen_rs_graphir.py  iface_roles.py  iface_roles_test.py  leaf_task_conversion_test.py  module_definitions.py  project_assembly_test.py  project_builder_test.py  slot_task_conversion_test.py  templates.py  top_task_conversion_test.py  utils.py
tapa/program/: BUILD.bazel  __init__.py  abc.py  directory.py  hls.py  hls_aie_codegen.py  hls_runner.py  hls_test.py  pack.py  rtl_codegen.py  synthesis.py
tapa/program_codegen/: __init__.py  children.py  custom_rtl.py  fifos.py  program.py
tapa/remote/: BUILD.bazel  __init__.py  config.py  connection.py  popen.py  ssh.py  test_config.py  test_popen.py  vendor.py
tapa/steps/: BUILD.bazel  __init__.py  analyze.py  common.py  floorplan.py  gcc.py  meta.py  pack.py  synth.py  synth_plan.py  synth_test.py  version.py
tapa/task_codegen/: __init__.py  fifos.py  fsm.py  m_axi.py
tapa/verilog/: BUILD.bazel  __init__.py  ast_utils.py  axi_xbar.py  util.py
tests/apps/: BUILD.bazel  README.md  analyze_test.py
(+637 files in other folders)
