"""Build rules for the final package."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

pkg_tar(
    name = "tapa-pkg-tar",
    srcs = [
        "//fpga-runtime:pkg-portable",
        "//tapa:pkg",
        "//tapa-cpp:pkg",
        "//tapa-lib:pkg-portable",
        "//tapa-system-include:pkg",
        "//tapa/cosim:pkg",
        "//tapacc:pkg",
    ],
    allow_duplicates_from_deps = True,
    allow_duplicates_with_different_content = False,
)

pkg_tar(
    name = "tapa-visualizer-tar",
    srcs = ["//tapa-visualizer"],
)

# refresh_compile_commands is temporarily disabled: the hedron macro uses
# native.py_binary which was removed from Bazel 9 builtins when
# --incompatible_autoload_externally=+@rules_python is set.
# TODO: re-enable once hedron_compile_commands is updated for Bazel 9.

# ── mdBook documentation ──────────────────────────────────────────────────────

# Supported local dev platforms: Linux x86_64, macOS x86_64, macOS arm64.
# Linux arm64 is not supported via Bazel — use the RTD cargo install path instead.

# config_settings for combined OS+CPU constraints used in the select()s below.
config_setting(
    name = "_macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "_macos_amd64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

alias(
    name = "mdbook_bin",
    actual = select({
        ":_macos_arm64": "@mdbook_macos_arm64//:mdbook",
        ":_macos_amd64": "@mdbook_macos_amd64//:mdbook",
        "//conditions:default": "@mdbook_linux_amd64//:mdbook",
    }),
)

alias(
    name = "mdbook_admonish_bin",
    actual = select({
        ":_macos_arm64": "@mdbook_admonish_macos_arm64//:mdbook-admonish",
        ":_macos_amd64": "@mdbook_admonish_macos_amd64//:mdbook-admonish",
        "//conditions:default": "@mdbook_admonish_linux_amd64//:mdbook-admonish",
    }),
)

genrule(
    name = "build",
    srcs = glob(["src/**"]) + ["book.toml"],
    outs = ["book.tar.gz"],
    # Source files in the Bazel sandbox are read-only symlinks, so we copy
    # the entire book directory to a writable temp dir before running mdbook build.
    cmd = """
        set -e
        MDBOOK=$$(realpath $(location :mdbook_bin))
        MDBOOK_DIR=$$(dirname $$MDBOOK)
        WORK=$$(mktemp -d)
        BOOK_DIR=$$(dirname $$(realpath $(location book.toml)))
        cp -rL $$BOOK_DIR/. $$WORK/
        PATH=$$MDBOOK_DIR:$$PATH $$MDBOOK build $$WORK --dest-dir $(RULEDIR)/book
        tar -czf $@ -C $(RULEDIR) book
        rm -rf $$WORK
    """,
    tools = [
        ":mdbook_bin",
    ],
)

sh_binary(
    name = "serve",
    srcs = ["serve.sh"],
    data = [
        ":mdbook_bin",
    ] + glob(["src/**"]) + ["book.toml"],
)
