"""Build rules for the final package."""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Expose `VERSION` so `//tapa-core` cargo genrules can include it in
# their input set. `tapa-cli::steps::version` pulls the version in
# via `include_str!("../../../../VERSION")` at compile time, so the
# Bazel sandbox must materialize it.
exports_files(
    ["VERSION"],
    visibility = ["//tapa-core:__pkg__"],
)

pkg_tar(
    name = "tapa-pkg-tar",
    srcs = [
        "//fpga-runtime:pkg-portable",
        "//tapa:pkg",
        "//tapa-cpp:pkg",
        "//tapa-lib:pkg-portable",
        "//tapa-system-include:pkg",
        "//tapacc:pkg",
    ],
    allow_duplicates_from_deps = True,
    allow_duplicates_with_different_content = False,
)

pkg_tar(
    name = "tapa-visualizer-tar",
    srcs = ["//tapa-visualizer"],
)

# refresh_compile_commands is temporarily disabled: the hedron macro uses
# native.py_binary which was removed from Bazel 9 builtins when
# --incompatible_autoload_externally=+@rules_python is set.
# TODO: re-enable once hedron_compile_commands is updated for Bazel 9.
