"""TAPA: dataflow HLS framework for fast compilation and high-frequency FPGA accelerators."""

module(name = "tapa")

bazel_dep(name = "aspect_rules_js", version = "3.0.3", dev_dependency = True)
bazel_dep(name = "aspect_rules_webpack", version = "0.17.1", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.1.4", dev_dependency = True)
bazel_dep(name = "rules_nodejs", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "rules_pkg", version = "1.1.0", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "rules_verilator", version = "0.2.1", dev_dependency = True)
bazel_dep(name = "rules_verilog", version = "0.1.0", dev_dependency = True)
bazel_dep(name = "toolchains_llvm", version = "1.6.0", dev_dependency = True)
bazel_dep(name = "verilator", version = "5.044", dev_dependency = True)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "mdbook_linux_amd64",
    build_file_content = 'exports_files(["mdbook"])',
    sha256 = "084e4342ba564db270108763e404a7d1f309d932651a22484e93c0dc1a071f6d",
    url = "https://github.com/rust-lang/mdBook/releases/download/v0.5.2/mdbook-v0.5.2-x86_64-unknown-linux-gnu.tar.gz",
)

http_archive(
    name = "mdbook_macos_amd64",
    build_file_content = 'exports_files(["mdbook"])',
    sha256 = "17cc64478ec279a73881420e850bd8f9d460552e56b50159ff465bc97eb90d6c",
    url = "https://github.com/rust-lang/mdBook/releases/download/v0.5.2/mdbook-v0.5.2-x86_64-apple-darwin.tar.gz",
)

http_archive(
    name = "mdbook_macos_arm64",
    build_file_content = 'exports_files(["mdbook"])',
    sha256 = "da2f55653e96e3f6e1c53e2e13e91cc0cfbce8ab971c2e0de792c0f1f8d24222",
    url = "https://github.com/rust-lang/mdBook/releases/download/v0.5.2/mdbook-v0.5.2-aarch64-apple-darwin.tar.gz",
)

http_archive(
    name = "mdbook_admonish_linux_amd64",
    build_file_content = 'exports_files(["mdbook-admonish"])',
    sha256 = "64ce6dad3d20d3723c149e333d9cf85a9f7d057f18c2707d264698afdfc6679f",
    url = "https://github.com/tommilligan/mdbook-admonish/releases/download/v1.20.0/mdbook-admonish-v1.20.0-x86_64-unknown-linux-gnu.tar.gz",
)

http_archive(
    name = "mdbook_admonish_macos_amd64",
    build_file_content = 'exports_files(["mdbook-admonish"])',
    sha256 = "f78237e9335554377fb4a83a7cb4ac382743729e1f3ca67d2e0e23314bcacab9",
    url = "https://github.com/tommilligan/mdbook-admonish/releases/download/v1.20.0/mdbook-admonish-v1.20.0-x86_64-apple-darwin.tar.gz",
)

http_archive(
    name = "mdbook_admonish_macos_arm64",
    build_file_content = 'exports_files(["mdbook-admonish"])',
    # No aarch64-apple-darwin build exists; use x86_64 via Rosetta 2.
    sha256 = "f78237e9335554377fb4a83a7cb4ac382743729e1f3ca67d2e0e23314bcacab9",
    url = "https://github.com/tommilligan/mdbook-admonish/releases/download/v1.20.0/mdbook-admonish-v1.20.0-x86_64-apple-darwin.tar.gz",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

llvm.toolchain(
    llvm_versions = {
        # Latest version supporting Ubuntus
        "ubuntu-18.04-x86_64": "18.1.8",
        "ubuntu-20.04-x86_64": "18.1.8",
        "ubuntu-22.04-x86_64": "18.1.8",
        "ubuntu-24.04-x86_64": "18.1.8",
        "ubuntu-25.04-x86_64": "18.1.8",
        # Latest version supporting RHELs
        "rhel-8.6-x86_64": "14.0.0",
        "rhel-8.7-x86_64": "14.0.0",
        "rhel-8.8-x86_64": "14.0.0",
        "rhel-8.9-x86_64": "14.0.0",
        "rhel-8.10-x86_64": "14.0.0",
        "rhel-9.0-x86_64": "14.0.0",
        "rhel-9.1-x86_64": "14.0.0",
        "rhel-9.2-x86_64": "14.0.0",
        "rhel-9.3-x86_64": "14.0.0",
        "rhel-9.4-x86_64": "14.0.0",
        "rhel-9.5-x86_64": "14.0.0",
        # Other platforms use latest
        "": "20.1.8",
    },
    stdlib = {
        "linux-x86_64": "stdc++",
        "linux-aarch64": "stdc++",
    },
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

register_toolchains(
    "@rules_verilator//verilator:verilator_toolchain",
    dev_dependency = True,
)

python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.13.4",
)
use_repo(python, python_3_13 = "python_3_13_4")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "17.9.1")  # Latest version supporting Ubuntu 18.04

pip.parse(
    hub_name = "tapa_deps",
    python_version = "3.13.4",
    requirements_lock = "//tapa:requirements_lock.txt",
)
use_repo(pip, "tapa_deps")

bazel_dep(name = "nlohmann_json", version = "3.12.0")  # Required by tapacc
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
git_override(
    module_name = "rules_boost",
    commit = "795af624bbc1a285b73358ee53eb056e30723d26",
    patch_cmds = [
        # Enable BOOST_USE_SEGMENTED_STACKS, BOOST_USE_ASAN, BOOST_USE_UCONTEXT.
        # Use perl -i for cross-platform compatibility (sed -i differs between GNU and BSD).
        """perl -i -pe 'print qq{    defines=["BOOST_USE_ASAN","BOOST_USE_SEGMENTED_STACKS","BOOST_USE_UCONTEXT"],\\n} if /name = "context",/' boost.BUILD""",
        "perl -i -ne 'print unless /fiber\\.cpp/' boost.BUILD",
    ],
    remote = "https://github.com/nelhage/rules_boost.git",
)

non_module_boost_repositories = use_extension("@com_github_nelhage_rules_boost//:boost/repositories.bzl", "non_module_dependencies")
use_repo(non_module_boost_repositories, "boost")

bazel_dep(name = "gflags", version = "2.2.2.bcr.1")
bazel_dep(name = "glog", version = "0.5.0")  # Must be 0.5.0; later versions require Bazel for host headers
bazel_dep(name = "googletest", version = "1.17.0")

single_version_override(
    module_name = "glog",
    patches = ["//bazel:patches/glog/0001-Fix-unused-but-set-variable.patch"],
)

resolve_vars = use_extension("//bazel:vars.bzl", "resolve_vars", dev_dependency = True)
use_repo(resolve_vars, "vars")

load_dependencies = use_extension(
    "//bazel:dependencies.bzl",
    "load_dependencies",
    dev_dependency = True,
)
use_repo(load_dependencies, "ssh_key", "vitis_hls", "xsim_legacy_rdi", "xsim_xv")

bazel_dep(name = "tinyxml2", version = "10.0.0")  # Required by FRT
bazel_dep(name = "libuuid", version = "2.39.3.bcr.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")

http_archive(
    name = "OpenCL",
    patch_args = ["-p1"],
    patch_cmds = [
        """
        cat >BUILD <<EOF
cc_library(
    name = "OpenCL",
    srcs = [
        "ocl_icd_loader.c",
        "ocl_icd_loader_gen.c",
    ],
    hdrs = [
        "config.h",
        "ocl_icd.h",
        "ocl_icd_debug.h",
        "ocl_icd_loader.h",
        "ocl_icd_loader_gen.h",
    ] + glob(["khronos-headers/CL/*.h"]),
    copts = ["-Wno-sign-compare"],
    linkopts = ["-ldl"],
    defines = [
        "CLLAYERINFO",
        "CL_NO_NON_ICD_DISPATCH_EXTENSION_PROTOTYPES",
        "HAVE_CONFIG_H",
    ],
    includes = [".", "khronos-headers"],
    visibility = ["//visibility:public"],
)
EOF
        """,
        """
        cat >config.h <<EOF
#define ETC_OPENCL_LAYERS "/etc/OpenCL/layers"
#define ETC_OPENCL_VENDORS "/etc/OpenCL/vendors"
#define HAVE_CL_CL_LAYER_H 1
#define HAVE_DLFCN_H 1
#define HAVE_INTTYPES_H 1
#define HAVE_LIBDL 1
#define HAVE_MALLOC 1
#define HAVE_REALLOC 1
#define HAVE_STDINT_H 1
#define HAVE_STDIO_H 1
#define HAVE_STDLIB_H 1
#define HAVE_STRINGS_H 1
#define HAVE_STRING_H 1
#define HAVE_STRSTR 1
#define HAVE_SYS_STAT_H 1
#define HAVE_SYS_TYPES_H 1
#define HAVE_UNISTD_H 1
#define OCL_ICD_OPENCL_VERSION "1.2"
#define PACKAGE "ocl-icd"
#define PACKAGE_BUGREPORT "ocl-icd-devel@lists.forge.imag.fr"
#define PACKAGE_NAME "OpenCL ICD Loader"
#define PACKAGE_TARNAME "ocl-icd"
#define PACKAGE_URL ""
#define STDC_HEADERS 1
#define VERSION "2.3.3"
#define PACKAGE_VERSION VERSION
#define PACKAGE_STRING "OpenCL ICD Loader " VERSION
EOF
        """,
    ],
    patches = [
        "//bazel:patches/opencl/ocl_icd.h.patch",
        "//bazel:patches/opencl/ocl_icd_loader_gen.h.patch",
        "//bazel:patches/opencl/ocl_icd_loader_gen.c.patch",
    ],
    sha256 = "8cd8e8e129db3081a64090fc1252bec39dc88cdb7b3f929315e014b75069bd9d",
    strip_prefix = "ocl-icd-2.3.3",
    urls = ["https://github.com/OCL-dev/ocl-icd/archive/refs/tags/v2.3.3.tar.gz"],
)

http_archive(
    name = "opencl-clhpp",
    patch_cmds = [
        """
        cat >BUILD <<EOF
cc_library(
    name = "opencl-clhpp",
    hdrs = glob(["include/**"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = ["@OpenCL"],
)
EOF
""",
    ],
    sha256 = "2726106df611fb5cb65503a52df27988d80c0b8844c8f0901c6092ab43701e8c",
    strip_prefix = "OpenCL-CLHPP-2023.02.06",
    urls = ["https://github.com/KhronosGroup/OpenCL-CLHPP/archive/refs/tags/v2023.02.06.tar.gz"],
)

http_archive(
    name = "xilinx_xrt",
    patch_cmds = [
        "rm -rf BUILD",
        """
        cat >BUILD.bazel <<EOF
cc_library(
    name = "xilinx_xrt",
    hdrs = [
        "src/include/1_2/CL/cl2xrt.hpp",
        "src/include/1_2/CL/cl_ext_xilinx.h",
    ] + glob(["src/runtime_src/core/include/**/*.h"]),
    includes = [
        "src/runtime_src/core/include",
        "src/include/1_2"
    ],
    visibility = ["//visibility:public"],
    deps = ["@opencl-clhpp"],
)
EOF
""",
    ],
    sha256 = "a901127412261d4ad8c1c6978f1d69680573af33a8702366031805c6acf42ebd",
    strip_prefix = "XRT-202510.2.19.194",
    urls = ["https://github.com/Xilinx/XRT/archive/refs/tags/202510.2.19.194.tar.gz"],
)

# Required by nuitka build
bazel_dep(name = "patchelf", version = "0.18.0")

# For compatibility with GCC7
# Based on patches from https://github.com/bazelbuild/bazel-central-registry/tree/4f4bad8f463685498cf9e0a4ba45ffe9e290a853/modules/patchelf/0.18.0/patches
git_override(
    module_name = "patchelf",
    commit = "769337c227799aa60911562b6940530f4a86eb3c",
    patch_cmds = [
        # 0001-Add-MODULE.bazel.patch
        """
        cat >BUILD.bazel <<EOF
cc_binary(
    name = "patchelf",
    srcs = glob([
        "src/*.cc",
        "src/*.h",
    ]),
    copts = [
        "-std=c++17",
    ],
    local_defines = [
        "D_FILE_OFFSET_BITS=64",
    ],
    visibility = ["//visibility:public"],
)
EOF
""",
        # 0002-Add-BUILD.bazel.patch
        """
        cat >MODULE.bazel <<EOF
module(
    name = "patchelf",
    version = "0.18.0",
    compatibility_level = 0,
)
EOF
""",
    ],
    remote = "https://github.com/NixOS/patchelf.git",
)

LLVM_VERSION_MAJOR = 20

LLVM_VERSION_MINOR = 1

LLVM_VERSION_PATCH = 8

LLVM_VERSION = "{}.{}.{}".format(LLVM_VERSION_MAJOR, LLVM_VERSION_MINOR, LLVM_VERSION_PATCH)

LLVM_SHA256 = "6898f963c8e938981e6c4a302e83ec5beb4630147c7311183cf61069af16333d"

http_archive(
    name = "tapa-llvm-project",
    patch_args = ["-p1"],
    patch_cmds = [
        """
        cp -r utils/bazel/llvm-project-overlay/* .
        rm -rf utils/bazel
        """,
        """
        cat >MODULE.bazel <<EOF
module(
    name = "llvm-project",
    version = "{}",
)

# Skylark dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.1")

# Library dependencies
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.2")
EOF
        """.format(LLVM_VERSION),
        """echo >BUILD.bazel""",
        """echo 'llvm_targets = ["X86", "AArch64"]' >llvm/targets.bzl""",
        """
        cat >vars.bzl <<EOF
LLVM_VERSION = "{0}.{1}.{2}"
LLVM_VERSION_MAJOR = {0}
LLVM_VERSION_MINOR = {1}
LLVM_VERSION_PATCH = {2}
PACKAGE_VERSION = "{0}.{1}.{2}"
MAX_CLANG_ABI_COMPAT_VERSION = "{0}"
EOF
        """.format(LLVM_VERSION_MAJOR, LLVM_VERSION_MINOR, LLVM_VERSION_PATCH),
    ],
    patches = [
        "//bazel:patches/tapa-llvm-project/0001-Disable-zlib-zstd-mpfr-pfm-and-proto.patch",
        "//bazel:patches/tapa-llvm-project/0002-Add-TAPA-pragmas-to-Clang.patch",
        "//bazel:patches/tapa-llvm-project/0003-Wno-error.patch",
        "//bazel:patches/tapa-llvm-project/0004-Patch-missing-macro.patch",
    ],
    sha256 = LLVM_SHA256,
    strip_prefix = "llvm-project-{}.src".format(LLVM_VERSION),
    urls = ["https://github.com/llvm/llvm-project/releases/download/llvmorg-{0}/llvm-project-{0}.src.tar.xz".format(LLVM_VERSION)],
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//tapa-visualizer:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

# Test data
http_file(
    name = "facebook_combined",
    downloaded_file_path = "facebook.txt.gz",
    sha256 = "125e84db872eeba443d270c70315c256b0af43a502fcfe51f50621166ad035d7",
    url = "https://snap.stanford.edu/data/facebook_combined.txt.gz",
)

git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
