"""FPGA runtime Bazel targets backed by Rust Cargo crates."""

load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")

package(default_visibility = ["//visibility:public"])

_PUBLIC_HEADERS = [
    "frt.h",
    "frt/arg_info.h",
    "frt/buffer.h",
    "frt/buffer_arg.h",
    "frt/device.h",
    "frt/stream.h",
    "frt/stream_arg.h",
    "frt/stringify.h",
    "frt/tag.h",
]

genrule(
    name = "cargo_release_artifacts",
    srcs = glob(
        ["**/*"],
        exclude = [
            "BUILD.bazel",
            "target/**",
        ],
    ),
    outs = [
        "cargo/libfrt.so",
        "cargo/libfrt.dylib",
        "cargo/libfrt_dpi_verilator.so",
        "cargo/libfrt_dpi_verilator.dylib",
        "cargo/libfrt_dpi_xsim.so",
        "cargo/libfrt_dpi_xsim.dylib",
    ],
    cmd = """
set -euo pipefail
CARGO="$(execpath @rules_rust//rust/toolchain:current_cargo_files)"
RUSTC="$(execpath @rules_rust//rust/toolchain:current_rustc_files)"
RUST_BIN_DIR="$$(cd "$$(dirname "$$CARGO")" && pwd)"
RUSTC_BIN_DIR="$$(cd "$$(dirname "$$RUSTC")" && pwd)"
export PATH="$$RUST_BIN_DIR:$$RUSTC_BIN_DIR:/usr/local/bin:/usr/bin:/bin:$$PATH"
export CARGO_TARGET_DIR="$(@D)/cargo-target"
cargo build --manifest-path "$(location Cargo.toml)" --release \\
  -p frt -p frt-dpi-verilator -p frt-dpi-xsim

if [[ -f "$$CARGO_TARGET_DIR/release/libfrt.so" ]]; then
  cp "$$CARGO_TARGET_DIR/release/libfrt.so" "$(location cargo/libfrt.so)"
else
  : > "$(location cargo/libfrt.so)"
fi
if [[ -f "$$CARGO_TARGET_DIR/release/libfrt.dylib" ]]; then
  cp "$$CARGO_TARGET_DIR/release/libfrt.dylib" "$(location cargo/libfrt.dylib)"
else
  : > "$(location cargo/libfrt.dylib)"
fi

if [[ -f "$$CARGO_TARGET_DIR/release/libfrt_dpi_verilator.so" ]]; then
  cp "$$CARGO_TARGET_DIR/release/libfrt_dpi_verilator.so" "$(location cargo/libfrt_dpi_verilator.so)"
else
  : > "$(location cargo/libfrt_dpi_verilator.so)"
fi
if [[ -f "$$CARGO_TARGET_DIR/release/libfrt_dpi_verilator.dylib" ]]; then
  cp "$$CARGO_TARGET_DIR/release/libfrt_dpi_verilator.dylib" "$(location cargo/libfrt_dpi_verilator.dylib)"
else
  : > "$(location cargo/libfrt_dpi_verilator.dylib)"
fi

if [[ -f "$$CARGO_TARGET_DIR/release/libfrt_dpi_xsim.so" ]]; then
  cp "$$CARGO_TARGET_DIR/release/libfrt_dpi_xsim.so" "$(location cargo/libfrt_dpi_xsim.so)"
else
  : > "$(location cargo/libfrt_dpi_xsim.so)"
fi
if [[ -f "$$CARGO_TARGET_DIR/release/libfrt_dpi_xsim.dylib" ]]; then
  cp "$$CARGO_TARGET_DIR/release/libfrt_dpi_xsim.dylib" "$(location cargo/libfrt_dpi_xsim.dylib)"
else
  : > "$(location cargo/libfrt_dpi_xsim.dylib)"
fi
""",
    local = True,
    tags = ["local"],
    tools = [
        "@rules_rust//rust/toolchain:current_cargo_files",
        "@rules_rust//rust/toolchain:current_rustc_files",
    ],
)

cc_import(
    name = "frt_rust_cdylib",
    shared_library = select({
        "//bazel:is_macos": "cargo/libfrt.dylib",
        "//conditions:default": "cargo/libfrt.so",
    }),
)

cc_library(
    name = "frt",
    srcs = [
        "frt/arg_info.cpp",
        "frt_compat.cpp",
    ],
    hdrs = _PUBLIC_HEADERS,
    includes = ["."],
    target_compatible_with = ["@platforms//os:linux"],
    deps = [
        ":frt_rust_cdylib",
        "@glog",
    ],
)

cc_library(
    name = "frt_cpp",
    srcs = [
        "frt/arg_info.cpp",
        "frt_compat.cpp",
    ],
    hdrs = _PUBLIC_HEADERS,
    includes = ["."],
    target_compatible_with = ["@platforms//os:linux"],
    deps = [
        ":frt_rust_cdylib",
        "@glog",
    ],
)

cc_library(
    name = "frt-sim",
    srcs = [
        "frt/arg_info.cpp",
        "frt_compat.cpp",
    ],
    hdrs = _PUBLIC_HEADERS,
    includes = ["."],
    deps = [
        ":frt_rust_cdylib",
        "@glog",
    ],
)

filegroup(
    name = "include",
    srcs = _PUBLIC_HEADERS,
)

pkg_files(
    name = "pkg-lib",
    srcs = [
        "cargo/libfrt.dylib",
        "cargo/libfrt.so",
        "cargo/libfrt_dpi_verilator.dylib",
        "cargo/libfrt_dpi_verilator.so",
        "cargo/libfrt_dpi_xsim.dylib",
        "cargo/libfrt_dpi_xsim.so",
        ":frt_cpp",
    ],
    prefix = "usr/lib",
    strip_prefix = strip_prefix.files_only(),
    target_compatible_with = ["@platforms//os:linux"],
)

pkg_files(
    name = "pkg-include",
    srcs = [":include"],
    prefix = "usr/include",
    strip_prefix = strip_prefix.from_pkg(""),
)

pkg_files(
    name = "pkg-extra-runtime-deps",
    srcs = [
        "@OpenCL",
        "@boost//:asio",
        "@boost//:filesystem",
        "@gflags",
        "@glog",
        "@minizip_ng",
        "@tinyxml2",
        "@yaml-cpp",
        "@zlib",
    ],
    prefix = "usr/lib",
    strip_prefix = strip_prefix.files_only(),
    target_compatible_with = ["@platforms//os:linux"],
)

pkg_filegroup(
    name = "pkg",
    srcs = [
        ":pkg-include",
        ":pkg-lib",
    ],
    target_compatible_with = ["@platforms//os:linux"],
)

pkg_filegroup(
    name = "pkg-portable",
    srcs = [
        ":pkg",
        ":pkg-extra-runtime-deps",
    ],
    target_compatible_with = ["@platforms//os:linux"],
)
