[workspace]
resolver = "2"
members = [
  "frt-shm",
  "frt-dpi",
  "frt-dpi-verilator",
  "frt-dpi-xsim",
  "frt-cosim",
  "frt",
]

[workspace.lints.clippy]
# Enable lint groups
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# Allow: adding doc sections to every fallible/unsafe/panicking fn is too verbose
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"

# Allow: too many trivial getters to annotate
must_use_candidate = "allow"

# Allow: const fn changes API semantics and is overzealous
missing_const_for_fn = "allow"

# Allow: intentional truncation/wrapping in FFI & hardware register code
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

# Allow: intentional alignment in shared-memory / queue headers
cast_ptr_alignment = "allow"

# Allow: _meta prefix is intentional (field used but not directly public)
used_underscore_binding = "allow"

# Allow: common Rust module naming pattern
module_name_repetitions = "allow"

# Allow: refactoring long functions would add indirection without clarity
too_many_lines = "allow"

# Allow: struct design choices
struct_excessive_bools = "allow"

# Allow: extern "C" FFI functions take raw pointers by design
not_unsafe_ptr_arg_deref = "allow"

# Allow: intentional unsafe impl Send for device handles with raw pointers
non_send_fields_in_send_ty = "allow"

# Allow: cognitive complexity thresholds are too low for FFI dispatch
cognitive_complexity = "allow"

# Allow: option_if_let_else often less readable than match
option_if_let_else = "allow"

# Allow: significant_drop_tightening has false positives
significant_drop_tightening = "allow"

# ── Restriction lints (cherry-picked) ──
# Safety documentation
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Prefer .to_owned() on &str for clarity
str_to_string = "deny"

# Style consistency
semicolon_outside_block = "deny"
needless_raw_strings = "deny"
missing_assert_message = "deny"
if_then_some_else_none = "deny"
map_err_ignore = "deny"

# Prevent common mistakes
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
error_impl_error = "deny"
string_add = "deny"
verbose_file_reads = "deny"
unnecessary_safety_comment = "deny"
fn_to_numeric_cast_any = "deny"

# Prevent subtle bugs
assertions_on_result_states = "deny"
as_underscore = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
filetype_is_file = "deny"
float_cmp_const = "deny"
get_unwrap = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
mixed_read_write_in_expression = "deny"
mutex_atomic = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
same_name_method = "deny"
suspicious_xor_used_as_pow = "deny"
try_err = "deny"
wildcard_enum_match_arm = "deny"

# Code quality
allow_attributes_without_reason = "deny"
pathbuf_init_then_push = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
string_lit_chars_any = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unused_result_ok = "deny"

# Allow: iteration order over HashMap/HashSet is irrelevant in this codebase
iter_over_hash_type = "allow"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.dependencies]
askama = { version = "0.12", features = ["serde_json"] }
frt-cosim = { path = "frt-cosim" }
frt-dpi = { path = "frt-dpi" }
frt-shm = { path = "frt-shm" }
insta = { version = "1", features = ["yaml"] }
libc = "0.2"
memmap2 = "0.9"
opencl3 = "0.10"
quick-xml = { version = "0.37", features = ["serialize"] }
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"
which = "7"
zip = "2"
